# nehanist

./: Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  compose.build.yaml  compose.dev.yaml  compose.yaml
.github/workflows/: backend.yaml  frontend.yaml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md
backend/app/: Cargo.toml  build.rs
backend/app/src/: main.rs
backend/crates/infra/app-server/: Cargo.toml  build.rs
backend/crates/infra/app-server/src/: lib.rs
frontend/: .dockerignore  .env.example  README.md  buf.gen.yaml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  theme.ts  vite-env.d.ts
frontend/src/components/: WeightInputScreen.tsx
frontend/src/lib/: appClient.ts
proto/: service.proto
terraform/dev/: main.tf  providers.tf  variebles.tf
terraform/modules/fe_gcs_bucket/: main.tf  outputs.tf  variables.tf
