[package]
edition = "2024"
name = "app"
version = "0.1.0"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.26"
prost = "0.13.5"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "net"] }
tonic = "0.12.3"
tonic-web = "0.12.3"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
