[package]
edition = "2024"
name = "app-server"
version = "0.1.0"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.26"
prost = "0.13.5"
tonic = "0.12.3"
tonic-web = "0.12.3"
tower-http = { version = "0.5.2", features = ["cors"] }

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
